--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/axdevil/coolui#readme",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "express": "^4.18.2"
   }
 }
