--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/axdevil/coolui#readme",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
