--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "dev": "nodemon dist/app.js"
+    "dev": "tsc && nodemon dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/axdevil/coolui#readme",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
