--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "dev": "tsc && nodemon dist/app.js"
+    "dev": "nodemon --exec ts-node app.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0"
   }
 }
