--- a/api/package.json
+++ b/api/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/axdevil/coolui#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
