--- a/api/package.json
+++ b/api/package.json
@@ -19,15 +19,19 @@
   "homepage": "https://github.com/axdevil/coolui#readme",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/connect-mongodb-session": "^2.4.7",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/morgan": "^1.9.9",
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^4.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0"
